syntax = "proto3";

package user;

// Pastikan ini sesuai dengan lokasi folder proto kamu
option go_package = "./proto";

message UserResponse {
  int32 id = 1;
  string full_name = 2;
  string username = 3;
  string email = 4;
  string phone_number = 5;
  bool is_active = 6;
}

message RegisterRequest {
  string full_name = 1;
  string email = 2;
  string phone_number = 3;
  string password = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message FindMeRequest {
  int32 userId = 1;
}

message FindMeResponse {
  string full_name = 1;
  string username = 2;
  string email = 3;
  string phone_number = 4;
  bool is_active = 5;
  string created_at = 6;
}

service UserService {
  rpc RegisterUser(RegisterRequest) returns (UserResponse);
  rpc LoginUser(LoginRequest)  returns (LoginResponse);
  rpc FindMe(FindMeRequest) returns (FindMeResponse);
}